[package]
authors = ["Banksy Technologies"]
edition = "2018"
name = "staking-pool"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.101", optional = true }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "sp-std/std",
    "sp-runtime/std",
]

